d/5232 fallback room image on checkout

--- a/project/src/main/res/values/styles_hotels.xml
+++ b/project/src/main/res/values/styles_hotels.xml
@@ -79,7 +79,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#474747</item>
     </style>
 
     <style name="HotelCheckoutImageSummary.Name" parent="HotelCheckoutImageSummary">
