--- a/project/src/main/res/layout/hotel_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/hotel_checkout_summary_widget.xml
@@ -6,10 +6,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_checkout_hotel_summary_widget"
+        android:layout_height="120dp"
+        android:background="@drawable/room_fallback"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:scaleType="fitCenter">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/hotel_name"
