--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -24,7 +24,7 @@
             android:layout_height="120dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitCenter" />
 
         <RelativeLayout
             android:id="@+id/collapsed_container"
