--- a/project/src/main/res/layout/widget_special_notice.xml
+++ b/project/src/main/res/layout/widget_special_notice.xml
@@ -6,11 +6,12 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/hotel_special_and_etp_margin"
         android:background="@android:color/transparent"
         android:orientation="vertical"
         android:padding="18dp">
 
-        <com.expedia.bookings.widget.TextView
+    <com.expedia.bookings.widget.TextView
             android:id="@+id/content_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
