--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -341,6 +341,8 @@
     <dimen name="hotel_review_content_line_spacing">3dp</dimen>
     <!--Review padding bottom-->
     <dimen name="hotel_review_padding_bottom">5dp</dimen>
+    <!-- marging for special notice and etp desc -->
+    <dimen name="hotel_special_and_etp_margin">15dp</dimen>
 
     <!--Dimensions for hotel reviews summary-->
     <!--Review summary rating text size-->
