--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -462,7 +462,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/map_click_container"
-                    android:background="@drawable/hotels_pay_later_background" >
+                    android:background="@drawable/hotels_pay_later_background">
 
                     <com.expedia.bookings.widget.SlidingRadioGroup
                         android:id="@+id/radius_pay_options"
@@ -527,9 +527,9 @@
     <com.expedia.bookings.widget.ResortFeeWidget
         android:id="@+id/resort_fee_widget"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="bottom"
+        android:layout_gravity="bottom"
         android:visibility="gone" />
 
     <LinearLayout
