--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -47,6 +47,7 @@
         <item name="skin_lxSearchToolbarText">@string/lx_search_title</item>
         <item name="skin_lxErrorNoResultsText">@string/lx_error_current_location_no_results</item>
         <item name="skin_lxErrorCurrentLocationText">@string/error_lx_current_location_search_message</item>
+        <item name="skin_lxErrorWidgetDrawable">@drawable/error_lx</item>
     </style>
 
     <style name="V2.Theme.LX.Transport" parent="V2.Theme.LX">
@@ -66,6 +67,7 @@
         <item name="skin_lxSearchToolbarText">@string/gt_search_title</item>
         <item name="skin_lxErrorNoResultsText">@string/gt_error_current_location_no_results</item>
         <item name="skin_lxErrorCurrentLocationText">@string/error_gt_current_location_search_message</item>
+        <item name="skin_lxErrorWidgetDrawable">@drawable/error_gt</item>
     </style>
 
     <!--
