--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -336,5 +336,6 @@
     <attr name="skin_lxSearchToolbarText" format="reference" />
     <attr name="skin_lxErrorNoResultsText" format="reference" />
     <attr name="skin_lxErrorCurrentLocationText" format="reference" />
+    <attr name="skin_lxErrorWidgetDrawable" format="reference" />
 
 </resources>
