5239 - Not Rated Hotels messaging
- Display Not Rated instead of 0/5 on SRP.
- Display No Reviews and 0 Reviews message on details screen.
- Display Best Price Guarantee if there is no ETP, Free Cancellation or reviews.
- TextView.setAppearance does not seem to pick the style completely like
  paddings. Setting the etp/free cancellation styles in code.

--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -208,6 +208,16 @@
                 android:paddingRight="14dp">
 
                 <com.expedia.bookings.widget.TextView
+                    android:id="@+id/no_guest_rating"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:layout_weight="1"
+                    android:text="@string/not_rated"
+                    android:textColor="@color/hotel_cell_gray_text"
+                    android:textSize="10sp" />
+
+                <com.expedia.bookings.widget.TextView
                     android:id="@+id/guest_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -222,6 +232,7 @@
                     app:textStyle="medium" />
 
                 <com.expedia.bookings.widget.TextView
+                    android:id="@+id/guest_rating_recommended_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
