--- a/project/src/airAsiaGo/res/values/colors.xml
+++ b/project/src/airAsiaGo/res/values/colors.xml
@@ -6,8 +6,17 @@
     <color name="hotel_list_progress_text_color">#333</color>
     <color name="flight_list_progress_text_color">#333</color>
     <color name="action_bar_text_aag">#F5A337</color>
+    <color name="action_bar_bg_color">#E21E25</color>
     <color name="login_text_aag">#333333</color>
     <color name="flight_trip_color_aag">#F8A424</color>
     <color name="flight_trip_price_aag">#E21E25</color>
     <color name="action_bar_selected_tab_underline_color">#E21E25</color>
+    <color name="collection_overlay_color">#56a1d5</color>
+
+    <color name="tablet_book_button_text_color">@color/action_bar_bg_color</color>
+    <color name="tablet_price_expanded_bucket_text_color">@color/action_bar_bg_color</color>
+    <color name="tablet_trip_bucket_text_color">@android:color/primary_text_light</color>
+    <color name="tablet_search_result_error_button_pressed">#D1EAFF</color>
+    <color name="tablet_search_result_error_button">#004E93</color>
+    <color name="tablet_results_search_blue">#608405</color>
 </resources>
