--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -18,6 +18,7 @@
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/ic_aag_logo</item>
         <item name="skin_phoneCheckoutLoginButtonTextColor">@color/login_text_aag</item>
         <item name="skin_tabletCheckoutLoginButtonTextColor">@color/login_text_aag</item>
+        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/ic_log_in_aag</item>
         <item name="skin_aboutAppNameString">@string/launcher_name</item>
         <item name="skin_loadingAirAsiaRoutesString">@string/loading_air_asia_routes_aag</item>
         <item name="skin_hotelListingSaleDrawable">@drawable/bg_hotel_cell_sale_airasiago</item>
