s/5179 hotel detail polish - animation resort fee and sticky select room. - making entire room row clickable. - fixing the ripple issue for review click.

--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -16,6 +16,7 @@
         android:layout_marginLeft="@dimen/hotel_room_list_container_margin"
         android:layout_marginRight="@dimen/hotel_room_list_container_margin"
         android:animateLayoutChanges="true"
+        android:background="@drawable/hotel_detail_ripple"
         android:orientation="vertical">
 
         <com.expedia.bookings.widget.OptimizedImageView
