--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -249,7 +249,8 @@
                     android:paddingRight="@dimen/lx_sort_filter_padding"
                     android:text="@string/plus_vip"
                     android:textSize="15sp"
-                    android:textColor="@color/hotels_primary_color" />
+                    android:textColor="@color/hotels_primary_color"
+                    android:visibility="gone"/>
 
                 <RelativeLayout
                     android:id="@+id/filter_vip_container"
@@ -259,7 +260,8 @@
                     android:clickable="true"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/lx_sort_filter_padding"
-                    android:paddingRight="@dimen/lx_sort_filter_padding">
+                    android:paddingRight="@dimen/lx_sort_filter_padding"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
