--- a/project/src/main/res/layout/hotel_dropdown_item.xml
+++ b/project/src/main/res/layout/hotel_dropdown_item.xml
@@ -33,6 +33,6 @@
         android:layout_gravity="center_vertical"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:textColor="@color/hotels_primary_color" />
+        android:textColor="#858585" />
 
 </LinearLayout>
