--- a/project/src/main/res/layout/widget_hotel_results.xml
+++ b/project/src/main/res/layout/widget_hotel_results.xml
@@ -36,6 +36,7 @@
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:overScrollMode="never"
         android:layout_marginTop="?attr/actionBarSize" />
 
     <LinearLayout
@@ -59,8 +60,8 @@
 
     <com.expedia.bookings.widget.FilterButtonWithCountWidget
         android:id="@+id/sort_filter_button_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/hotel_filter_height"
         android:layout_gravity="bottom"
         android:orientation="vertical"
         android:visibility="gone"/>
