--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -362,4 +362,6 @@
     <dimen name="hotel_detail_gradient_height">120dp</dimen>
     <!-- hotel Detail divider margin -->
     <dimen name="hotel_detail_divider_margin">10dp</dimen>
+    <!-- hotel filter toolbar height -->
+    <dimen name="hotel_filter_height">58dp</dimen>
 </resources>
