--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -18,13 +18,27 @@
         android:background="@drawable/hotel_detail_ripple"
         android:orientation="vertical">
 
-        <com.expedia.bookings.widget.OptimizedImageView
-            android:id="@+id/room_header_image"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:scaleType="fitCenter" />
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/room_header_image"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:scaleType="fitCenter" />
+
+            <View
+                android:id="@+id/gradient_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="bottom"
+                android:background="@drawable/hotel_result_list_gradient_bottom"
+                android:scaleType="centerCrop" />
+
+        </FrameLayout>
 
         <RelativeLayout
             android:id="@+id/collapsed_container"
@@ -153,18 +167,14 @@
                 android:id="@+id/view_room_button"
                 style="@style/HotelToggleButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="0dp"
-                android:paddingBottom="5dp"
-                android:paddingTop="5dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:layout_height="34dp"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/total_price_per_night"
+                android:layout_marginBottom="20dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
-                 />
+                android:paddingBottom="5dp"
+               android:paddingTop="5dp" />
         </RelativeLayout>
 
         <View
@@ -180,7 +190,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
-            android:paddingBottom="15dp"
+            android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp">
@@ -210,8 +220,6 @@
             android:id="@+id/row_divider"
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             android:background="@color/hotel_detail_divider" />
     </LinearLayout>
 
