--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -207,8 +207,8 @@
     <style name="HotelToggleButton">
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@drawable/hotel_toggle_text</item>
-        <item name="android:textOff">"View Room"</item>
-        <item name="android:textOn">"Book"</item>
+        <item name="android:textOff">@string/view_room_button_text</item>
+        <item name="android:textOn">@string/book_room_button_text</item>
         <item name="android:textSize">17sp</item>
         <item name="android:background">@drawable/hotel_toggle_background_selector</item>
     </style>
