--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -357,4 +357,6 @@
     <!-- Error widget button colors -->
     <color name="error_widget_edit_button_selected_color">#7C7C7C</color>
 
+    <color name="rating_yellow_disabled">#DBDBDB</color>
+    <color name="rating_yellow">#F6AE24</color>
 </resources>
