--- a/project/src/voyages/res/values/colors.xml
+++ b/project/src/voyages/res/values/colors.xml
@@ -8,9 +8,13 @@
     <color name="hotel_list_progress_text_color">#333</color>
     <color name="flight_list_progress_text_color">#333</color>
     <color name="action_bar_text_vsc">#F5A337</color>
+    <color name="action_bar_bg_color">#36424F</color>
     <color name="login_text_vsc">#333333</color>
     <color name="flight_trip_color_vsc">#F8A424</color>
     <color name="flight_trip_price_vsc">#E21E25</color>
     <color name="coupon_success_message_color">#7abb00</color>
+    <color name="collection_overlay_color">#56a1d5</color>
 
+    <color name="tablet_book_button_text_color">@color/action_bar_bg_color</color>
+    <color name="tablet_price_expanded_bucket_text_color">@color/action_bar_bg_color</color>
 </resources>
