s/5179 detail polish - removed gradient for room image. - hiding room info container in collpased row. - text style for toggle and select room button.

--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -147,8 +147,7 @@
                         android:paddingTop="5dp"
                         android:text="@string/select_a_room_instruction"
                         android:textAllCaps="false"
-                        android:textColor="@color/hotels_primary_color"
-                        android:textSize="17sp" />
+                        android:textAppearance="@style/HotelButtonTextAppearance" />
 
                 </RelativeLayout>
 
