--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -18,27 +18,13 @@
         android:background="@drawable/hotel_detail_ripple"
         android:orientation="vertical">
 
-        <FrameLayout
+        <ImageView
+            android:id="@+id/room_header_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_gravity="center"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/room_header_image"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:scaleType="fitCenter" />
-
-            <View
-                android:id="@+id/gradient_bottom"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_gravity="bottom"
-                android:background="@drawable/hotel_result_list_gradient_bottom"
-                android:scaleType="centerCrop" />
-
-        </FrameLayout>
+            android:gravity="center"
+            android:scaleType="fitCenter" />
 
         <RelativeLayout
             android:id="@+id/collapsed_container"
@@ -167,14 +153,15 @@
                 android:id="@+id/view_room_button"
                 style="@style/HotelToggleButton"
                 android:layout_width="wrap_content"
-                android:layout_height="34dp"
+                android:layout_height="36dp"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/total_price_per_night"
                 android:layout_marginBottom="20dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="10dp"
                 android:paddingBottom="5dp"
-               android:paddingTop="5dp" />
+                android:paddingTop="5dp"
+                android:textAppearance="@style/HotelToggleButtonTextAppearance"/>
         </RelativeLayout>
 
         <View
