--- a/project/src/main/res/values/attrs.xml
+++ b/project/src/main/res/values/attrs.xml
@@ -309,4 +309,10 @@
         <attr name="five_lob_btn" format="boolean" />
     </declare-styleable>
 
+    <!-- Message Loading/Progress View-->
+    <declare-styleable name="MessageProgressView">
+        <attr name="line_color" format="color" />
+        <attr name="background_tint" format="color" />
+    </declare-styleable>
+
 </resources>
