--- a/project/src/main/res/layout/coupon_widget.xml
+++ b/project/src/main/res/layout/coupon_widget.xml
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/coupon_error_unrecognized"
-                android:textColor="@color/error_color"
+                android:textColor="#FFDD2C00"
                 android:textSize="14sp"
                 android:visibility="gone"
                 app:textStyle="light" />
