--- a/project/src/main/res/layout/section_hotel_neighborhood_row.xml
+++ b/project/src/main/res/layout/section_hotel_neighborhood_row.xml
@@ -16,7 +16,8 @@
         android:id="@+id/neighborhood_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/lx_details_text_color" />
+        android:textColor="@color/hotel_filter_neighborhood_text"
+        android:textSize="15sp"/>
 
     <Space
         android:layout_width="0dp"
