--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -320,6 +320,38 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical" />
 
+                <RelativeLayout
+                    android:id="@+id/collapsed_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:orientation="horizontal"
+                    android:layout_gravity="right"
+                    android:paddingLeft="@dimen/lx_sort_filter_padding"
+                    android:paddingRight="@dimen/lx_sort_filter_padding"
+                    android:visibility="gone">
+
+                    <ImageButton
+                        android:id="@+id/show_more_less_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:layout_centerVertical="true"
+                        android:clickable="false"
+                        android:paddingTop="5dp"
+                        android:paddingRight="5dp"
+                        android:src="@drawable/read_more" />
+
+                    <TextView
+                        android:id="@+id/show_more_less_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@id/show_more_less_icon"
+                        android:text="@string/show_more" />
+                </RelativeLayout>
+
                 <Space
                     android:layout_width="match_parent"
                     android:layout_height="52dp" />
