--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -46,7 +46,7 @@
                     style="@style/CarAutocomplete"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_toEndOf="@id/location_image_view"
+                    android:layout_toRightOf="@id/location_image_view"
                     android:layout_weight="1"
                     android:textColorHighlight="#12AD9F"
                     android:visibility="gone" />
@@ -56,7 +56,7 @@
                     style="@style/CarAutocomplete"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_toEndOf="@id/location_image_view"
+                    android:layout_toRightOf="@id/location_image_view"
                     android:layout_weight="1"
                     android:completionThreshold="1"
                     android:dropDownAnchor="@+id/drop_down_anchor"
