--- a/project/src/main/res/values/styles_hotels.xml
+++ b/project/src/main/res/values/styles_hotels.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
+
     <style name="V2.Theme.Hotels" parent="Whitelabel.HotelTheme.Base" />
 
     <style name="V2.Theme.Transparent" parent="Whitelabel.HotelTheme.Base">
@@ -110,6 +111,25 @@
         <item name="android:paddingLeft">9dp</item>
         <item name="android:paddingTop">3dp</item>
         <item name="android:layout_marginRight">8dp</item>
+    </style>
+
+    <style name="HotelToggleButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textOff">@string/view_room_button_text</item>
+        <item name="android:textOn">@string/book_room_button_text</item>
+        <item name="android:background">@drawable/hotel_toggle_background_selector</item>
+        <item name="android:textColor">@drawable/hotel_toggle_text</item>
+    </style>
+
+    <style name="HotelToggleButtonTextAppearance">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="HotelButtonTextAppearance">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/hotels_primary_color</item>
     </style>
 
 </resources>
