--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -105,6 +105,7 @@
                         app:textStyle="medium" />
 
                     <LinearLayout
+                        android:id="@+id/rating_amenity_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="bottom"
