--- a/project/src/airAsiaGo/res/values-sw600dp/styles.xml
+++ b/project/src/airAsiaGo/res/values-sw600dp/styles.xml
@@ -5,4 +5,8 @@
         <item name="android:progressDrawable">@drawable/ratingbar_star_hotel_details_small</item>
     </style>
 
+    <style name="RatingBar.Circle.HotelDetails.AAG">
+        <item name="android:progressDrawable">@drawable/ratingbar_circle_hotel_details_small</item>
+    </style>
+
 </resources>
