--- a/project/src/airAsiaGo/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/airAsiaGo/res/values-sw600dp/tablet_themes.xml
@@ -31,7 +31,7 @@
         <item name="skin_skin_tablet_dates_popup_done_drawable">@drawable/ic_tablet_search_results_popup_done_check</item>
         <item name="skin_tablet_hotel_details_background_drawable">@drawable/ic_hotel_details_background_layer_list</item>
         <item name="skin_tabletHotelDetailsStarRatingStyle">@style/RatingBar.Star.HotelDetails.AAG</item>
-        <item name="skin_tabletHotelDetailsCircleRatingStyle">@style/RatingBar.Star.HotelDetails.AAG</item>
+        <item name="skin_tabletHotelDetailsCircleRatingStyle">@style/RatingBar.Circle.HotelDetails.AAG</item>
 
         <item name="skin_tablet_flight_confirmation_placeholder">@drawable/bg_itin_placeholder</item>
         <item name="skin_tablet_hotel_confirmation_placeholder">@drawable/bg_itin_placeholder</item>
