--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -352,7 +352,8 @@
                     android:paddingLeft="18dp"
                     android:paddingRight="18dp"
                     android:paddingTop="15dp"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"
+                    android:visibility="gone" />
 
                 <View
                     android:id="@+id/common_amenities_divider"
@@ -360,7 +361,8 @@
                     android:layout_height="1px"
                     android:layout_below="@+id/common_amenities_text"
                     android:layout_marginBottom="10dp"
-                    android:background="@color/hotel_detail_divider" />
+                    android:background="@color/hotel_detail_divider"
+                    android:visibility="gone" />
 
                 <TableLayout
                     android:id="@+id/room_container"
