5208 show dropdown if no location 5171 pad location text to prevent long airport 5325 dont send current location text to ess

--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -76,7 +76,7 @@
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
                     android:src="@drawable/input_x"
-                    android:visibility="gone" />
+                    android:visibility="invisible" />
             </RelativeLayout>
 
             <View
