--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -37,6 +37,8 @@
                     android:layout_width="55dp"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
                     android:layout_marginRight="1dp"
                     android:src="@drawable/location"
                     android:tint="#FFFFFF" />
@@ -51,17 +53,13 @@
                     android:textColorHighlight="#12AD9F"
                     android:visibility="gone" />
 
-                <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
+                <EditText
                     android:id="@+id/hotel_location_autocomplete"
                     style="@style/CarAutocomplete"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_toRightOf="@id/location_image_view"
                     android:layout_weight="1"
-                    android:completionThreshold="1"
-                    android:dropDownAnchor="@+id/drop_down_anchor"
-                    android:dropDownSelector="#FFFFFF"
-                    android:dropDownWidth="fill_parent"
                     android:hint="@string/search_location"
                     android:imeOptions="actionDone"
                     android:inputType="textNoSuggestions"
@@ -78,11 +76,6 @@
                     android:src="@drawable/input_x"
                     android:visibility="invisible" />
             </RelativeLayout>
-
-            <View
-                android:id="@+id/drop_down_anchor"
-                android:layout_width="match_parent"
-                android:layout_height="0dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -171,6 +164,12 @@
             app:calendarWeekSelectionColor="@color/hotels_primary_color" />
 
     </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/drop_down_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
