5119 - Some polish on cars/lx error screen.
- Make the edit search button have rounded corners on pre lollipop.
- Center the current location error text on LX.

--- a/project/src/main/res/layout/lx_result_presenter.xml
+++ b/project/src/main/res/layout/lx_result_presenter.xml
@@ -87,7 +87,8 @@
                     android:id="@+id/toolbar_subtitle_text"
                     style="@style/CarsToolbarSubtitleTextAppearance"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
             </LinearLayout>
         </FrameLayout>
